Bug 855145 - DeMACROize the JS tracing interfaces; r=billm,mccr8

--HG--
extra : rebase_source : 915c80052b4412f653033eb5fc4d4f96c5d49bd5